--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 80px 0;
-  background: url("../images/footer/bg.png") center/cover no-repeat;
+  // background: url("../images/footer/bg.png") center/cover no-repeat;
 
   &__inner {
     display: flex;
